@@ -339,15 +339,6 @@ extern void *realloc(void *__ptr, size_t __size) __ATTR_MALLOC__;
 
 extern double strtod(const char *__nptr, char **__endptr);
 
-/**
-     The atof() function converts the initial portion of the string pointed
-     to by \c nptr to double representation.
-
-     It is equivalent to calling
-
-     		\code strtod(nptr, (char **)NULL); \endcode
- */
-
 extern double atof(const char *__nptr);
 
 /** Highest number that can be generated by rand(). */
